/*
Copyright 2019 Adobe. All rights reserved.
This file is licensed to you under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License. You may obtain a copy
of the License at http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under
the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
OF ANY KIND, either express or implied. See the License for the specific language
governing permissions and limitations under the License.
*/

import React from 'react';
import { renderAirglow } from 'airglow';
import ReactStore from '@airglow/store-react';
import plugin, { lastDispatch, dispatchList } from '../../src/index';

let tree;

describe('AirglowTestIntegrationTest', () => {
  beforeEach(() => {
    tree = renderAirglow(
      <div />,
      {
        plugins: [plugin()],
        store: ReactStore
      }
    );
    tree.dispatch({ type: 'testEvent' });
    tree.dispatch({ type: 'another' });
  });
  it('should keep track of all the dispatches', () => {
    expect(dispatchList(tree.getState())).toMatchSnapshot();
  });
  it('should correctly get the last event', () => {
    expect(lastDispatch(tree.getState())).toMatchSnapshot();
  });
});
